--- a/styles.css
+++ b/styles.css
@@ -1,10 +1,1 @@
-.sidebarLeft {
-    float: left;
-    width: 360px;
-    z-index: 1;
-    overflow: hidden;
-    position: fixed;
-    top: 0;
-    left: 0;
-    bottom: 0;
-}
+/*Things will come and go. I hate css*/
