finally fixed footer ;-;

--- a/public/styles.css
+++ b/public/styles.css
@@ -62,10 +62,11 @@ html {
     z-index: 1000;
   }
 
-  .bottom {
-    position: absolute; bottom:
-    bottom: 5px;
-    width: 100%;
-    text-align: center;
+  .footer {
+    position: fixed;
+   left: 0;
+   bottom: 0;
+   width: 100%;
+   text-align: center;
     color: #F589A6;
 }
