--- a/public/are-you-a-robot/style.css
+++ b/public/are-you-a-robot/style.css
@@ -1,14 +1,16 @@
 @import url('https://fonts.googleapis.com/css2?family=Roboto+Mono:wght@100&display=swap');
-</style>
- {
+
+ font {
   font-family: 'Roboto Mono', monospace;
   font-size: 12pt;
   margin: 0;
   box-sizing: border-box;
 }
 
-body {
-  background: url(/images/AppleWorks-1.3-screen-shot.jpg);
+html {
+  background-image: url('images/AppleWorks-1.3-screen-shot.jpg');
+  background-repeat: repeat; /* Allows the image to repeat */
+  background-position: top left; /* Sets the starting position of the background image */
 }
 
 .title {
