--- a/public/are-you-a-robot/style.css
+++ b/public/are-you-a-robot/style.css
@@ -1,6 +1,6 @@
 @import url('https://fonts.googleapis.com/css2?family=Roboto+Mono:wght@100&display=swap');
 
- font {
+font {
   font-family: 'Roboto Mono', monospace;
   font-size: 12pt;
   margin: 0;
@@ -8,9 +8,9 @@
 }
 
 html {
-  background-image: url('images/AppleWorks-1.3-screen-shot.jpg');
-  background-repeat: repeat; /* Allows the image to repeat */
-  background-position: top left; /* Sets the starting position of the background image */
+  background-color: black;
+  background-repeat: repeat;
+  background-position: top left;
 }
 
 .title {
@@ -27,17 +27,26 @@ html {
 
 .wrapper {
   height: 95vh;
+  display: flex; /* Enables flexbox for content alignment */
+  justify-content: flex-end; /* Aligns the content to the right */
+}
+
+.content-wrapper {
+  display: flex; /* Ensures chat and side content are next to each other */
+  width: 100%;
 }
 
 .chat {
   background: black;
-  box-shadow: 10px 10px 0px rgb(0, 0, 0);
+  box-shadow: 10px 10px 0px rgb(63, 206, 75);
   overflow: scroll;
   height: 100%;
   display: flex;
   flex-direction: column;
-  padding: 20px 20px 0px 20px;
+  padding: 20px;
   border-radius: 10px;
+  max-width: 70%; /* Increase the max-width of the chat */
+  min-width: 300px; /* Set a minimum width for the chat box */
 }
 
 .messages {
@@ -65,7 +74,7 @@ html {
 .messages .bot {
   text-align: left;
   margin-right: auto;
-  background:black;
+  background: black;
   color: green;
 }
 
@@ -92,27 +101,35 @@ html {
   display: block;
   width: 100%;
   outline: 0;
-  border-top: 0px;
-  border-right: 0px;
+  border-top: 0;
+  border-right: 0;
   border-bottom: 2px solid black;
-  border-left: 0px;
+  border-left: 0;
 }
 
 input:focus {
   border-bottom: 2px solid rgb(0, 0, 0);
 }
 
+.side-content {
+  font-size: 20px;
+  color: #F589A6;
+  padding: 20px;
+  text-align: right; /* Aligns text on the left */
+}
+
 @media all and (min-width: 720px) {
   .wrapper {
-    width: 40vw;
+    width: 80vw; /* Increase the width of the wrapper to allow more space */
     height: 90vh;
-    margin: 0 auto 2.5vh;
+    margin: 0 0 2.5vh;
+    justify-content: flex-end;
   }
 }
 
 @media all and (min-width: 1280px) {
   .wrapper {
-    width: 27.5vw;
+    width: 70vw; /* Adjust width to maintain a good layout on larger screens */
   }
   .title {
     height: 7.5vh;
