--- a/public/are-you-a-robot/style.css
+++ b/public/are-you-a-robot/style.css
@@ -13,6 +13,11 @@ html {
   background-position: top left;
 }
 
+body {
+  height: 100%;
+  margin: 0;
+}
+
 .title {
   height: 5vh;
   display: flex;
@@ -26,13 +31,14 @@ html {
 }
 
 .wrapper {
-  height: 95vh;
-  display: flex; /* Enables flexbox for content alignment */
-  justify-content: flex-end; /* Aligns the content to the right */
+  display: flex;
+  min-height: 100vh;
+  justify-content: flex-end;
 }
 
 .content-wrapper {
-  display: flex; /* Ensures chat and side content are next to each other */
+  display: flex;
+  flex: 1;
   width: 100%;
 }
 
@@ -40,13 +46,13 @@ html {
   background: black;
   box-shadow: 10px 10px 0px rgb(63, 206, 75);
   overflow: scroll;
-  height: 100%;
+  height: 95%;
   display: flex;
   flex-direction: column;
-  padding: 20px;
+  padding: 30px;
   border-radius: 10px;
-  max-width: 70%; /* Increase the max-width of the chat */
-  min-width: 300px; /* Set a minimum width for the chat box */
+  max-width: 70%;
+  min-width: 300px;
 }
 
 .messages {
@@ -82,7 +88,7 @@ html {
   text-align: right;
   margin-right: 20px;
   margin-left: auto;
-  background: rgb(63, 206, 75);
+  background: #3fce4b;
   border: 1px solid rgb(0, 0, 0);
   color: rgb(0, 0, 0);
 }
@@ -90,8 +96,6 @@ html {
 .actions {
   flex-shrink: 0;
   width: 100%;
-  position: sticky;
-  bottom: -1px;
   padding: 10px 0px 20px;
   background: white;
 }
@@ -112,24 +116,34 @@ input:focus {
 }
 
 .side-content {
+  display: flex;
+  flex-direction: column;
   font-size: 20px;
-  color: #F589A6;
+  color: #3fce4b;
   padding: 20px;
-  text-align: right; /* Aligns text on the left */
+  text-align: left;
+  flex: 1;
+}
+
+.footer {
+  width: 100%;
+  text-align: left;
+  color: RED;
+  background-color: black;
+  margin-top: auto;
+  box-sizing: border-box;  /* Ensures padding doesn't affect width */
 }
 
 @media all and (min-width: 720px) {
   .wrapper {
-    width: 80vw; /* Increase the width of the wrapper to allow more space */
-    height: 90vh;
+    width: 80vw;
     margin: 0 0 2.5vh;
-    justify-content: flex-end;
   }
 }
 
 @media all and (min-width: 1280px) {
   .wrapper {
-    width: 70vw; /* Adjust width to maintain a good layout on larger screens */
+    width: 90vw;
   }
   .title {
     height: 7.5vh;
